@@ -64,7 +64,9 @@ public class DefaultResourceConfig extends ResourceConfig {
     private final Map<String, MediaType> mediaExtentions = new HashMap<String, MediaType>();
     
     private final Map<String, String> languageExtentions = new HashMap<String, String>();
-    
+
+    private final Map<String, Object> explicitRootResources = new HashMap<String, Object>();
+
     private final Map<String, Boolean> features = new HashMap<String, Boolean>();
     
     private final Map<String, Object> properties = new HashMap<String, Object>();
@@ -113,6 +115,11 @@ public class DefaultResourceConfig extends ResourceConfig {
         return languageExtentions;
     }
     
+    @Override
+    public Map<String, Object> getExplicitRootResources() {
+        return explicitRootResources;
+    }
+
     @Override
     public Map<String, Boolean> getFeatures() {
         return features;
